traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:7: error: value >- is not a member of Int
    if((posX<xMax)&&posX>-1) {
                        ^